--- a/src/Index.html
+++ b/src/Index.html
@@ -53,7 +53,15 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link text-black text-primary dropdown-toggle show display-4" href="index.html#top" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Boarding &amp; Breeding</a><div class="dropdown-menu show" aria-labelledby="dropdown-441" data-bs-popper="none"><a class="text-black text-primary dropdown-item display-4" href="index.html#header1-f">Boarding<br></a><a class="text-black text-primary show dropdown-item display-4" href="Breeding.html#header1-r">Breeding</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="grooming.html#top">Grooming</a></li></ul>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link link text-black text-primary dropdown-toggle show display-4" href="index.html#top" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Boarding &amp; Breeding</a>
+                        <div class="dropdown-menu show" aria-labelledby="dropdown-441" data-bs-popper="none">
+                            <a class="text-black text-primary dropdown-item display-4" href="index.html#header1-f">Boarding<br></a>
+                            <a class="text-black text-primary show dropdown-item display-4" href="Breeding.html#header1-r">Breeding</a></div>
+                     </li>
+                    <li class="nav-item"><a class="nav-link link text-black display-4" href="grooming.html#top">Grooming</a></li>
+                </ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://www.facebook.com/HaslamsDoggyDayCare" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-facebook socicon"></span>
