Add scripts for mobile flexibility

--- a/src/Index.html
+++ b/src/Index.html
@@ -42,7 +42,7 @@
                         <img src="assets/images/doggydaycare-logo-121x86.jpg" alt="Mobirise Website Builder" style="height: 4.7rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-7" href="https://mobiri.se">Haslams Doggy Day Care and Boarding</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-7" href="index.html">Haslams Doggy Day Care and Boarding</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -334,6 +334,11 @@
         </div>
     </div>
 </section>
-  
+<script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="assets/parallax/jarallax.js"></script>
+<script src="assets/smoothscroll/smooth-scroll.js"></script>
+<script src="assets/ytplayer/index.js"></script>
+<script src="assets/dropdown/js/navbar-dropdown.js"></script>
+<script src="assets/formoid/formoid.min.js"></script>  
 </body>
 </html>
