--- a/src/grooming.html
+++ b/src/grooming.html
@@ -56,9 +56,9 @@
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
                     <li class="nav-item"><a class="nav-link link text-black display-4" href="grooming.html#top">Grooming</a></li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link link text-black text-primary dropdown-toggle show display-4" href="index.html#top" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Boarding &amp; Breeding</a>
+                        <a class="nav-link link text-black text-primary dropdown-toggle show display-4" href="Index.html#top" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Boarding &amp; Breeding</a>
                         <div class="dropdown-menu show" aria-labelledby="dropdown-441" data-bs-popper="none">
-                            <a class="text-black text-primary dropdown-item display-4" href="index.html#header1-f">Boarding<br></a>
+                            <a class="text-black text-primary dropdown-item display-4" href="Index.html#top">Boarding<br></a>
                             <a class="text-black text-primary show dropdown-item display-4" href="Breeding.html#header1-r">Breeding</a></div>
                      </li>
                 </ul>
