home page content change

--- a/src/Index.html
+++ b/src/Index.html
@@ -88,9 +88,11 @@
     <div class="align-center container">
         <div class="row justify-content-center">
             <div class="col-12 col-lg-8">
-                <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Day Care &amp; Boarding</strong></h1>
+                <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Haslams Doggy Day Care &amp; Boarding</strong></h1>
                 
-                <p class="mbr-text mbr-fonts-style display-7"><b>Day &amp; night care and boarding in a beautiful home setting.<br>Providing a safe play area for your dogs, come for a coffee and chat!</b><br><br></p>
+                <p class="mbr-text mbr-fonts-style display-7"><b>Day care and boarding in a beautiful home setting.<br></b></p>
+                <p class="mbr-text mbr-fonts-style display-7"><b>Highly experienced dog care professionals offering day care and boarding, <a class="text-black" href="Breeding.html"><b>breeding services</b></a>, and <a class="text-black" href="grooming.html"><b>luxury grooming</b></a>.</b></p>
+                <p><b>Providing a safe play area for your dogs, come for a coffee and chat!</b></p><br/><br/>
                 
             </div>
         </div>
