--- a/src/Index.html
+++ b/src/Index.html
@@ -92,7 +92,7 @@
                 
                 <p class="mbr-text mbr-fonts-style display-7"><b>Day care and boarding in a beautiful home setting.<br></b></p>
                 <p class="mbr-text mbr-fonts-style display-7"><b>Highly experienced dog care professionals offering day care and boarding, <a class="text-black" href="Breeding.html"><b>breeding services</b></a>, and <a class="text-black" href="grooming.html"><b>luxury grooming</b></a>.</b></p>
-                <p><b>Providing a safe play area for your dogs, come for a coffee and chat!</b></p><br/><br/>
+                <p class="mbr-text mbr-fonts-style display-7"><b>Providing a safe play area for your dogs, come for a coffee and chat!</b></p><br/><br/>
                 
             </div>
         </div>
