--- a/src/Index.html
+++ b/src/Index.html
@@ -100,7 +100,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="title col-12 col-md-9">
-                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2"><strong>Highest Standards Breeder &amp; Boarder</strong></h3>
+                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2"><strong>Higher Standards Breeder &amp; Boarder</strong></h3>
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7">Day care and home boarding tailored to your dog's needs.<br/></h4>
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7"> We provide a free-roam house and garden for the dogs, with a safe paddock just around the corner (weather permitting).</h4>
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7"> Day care and boarding in a beautiful home setting.<br></h4>
