--- a/src/Index.html
+++ b/src/Index.html
@@ -41,7 +41,7 @@
                         <img src="assets/images/doggydaycare-logo-121x86.jpg" alt="Haslam dog care Bolton" style="height: 4.7rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-7" href="index.html">Haslams Doggy Day Care and Boarding</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-7" href="Index.html">Haslams Doggy Day Care and Boarding</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -54,9 +54,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
                     <li class="nav-item dropdown">
-                        <a class="nav-link link text-black text-primary dropdown-toggle show display-4" href="index.html#top" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Boarding &amp; Breeding</a>
+                        <a class="nav-link link text-black text-primary dropdown-toggle show display-4" href="Index.html#top" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Boarding &amp; Breeding</a>
                         <div class="dropdown-menu show" aria-labelledby="dropdown-441" data-bs-popper="none">
-                            <a class="text-black text-primary dropdown-item display-4" href="index.html#header1-f">Boarding<br></a>
+                            <a class="text-black text-primary dropdown-item display-4" href="Index.html#header1-f">Boarding<br></a>
                             <a class="text-black text-primary show dropdown-item display-4" href="Breeding.html#header1-r">Breeding</a></div>
                      </li>
                     <li class="nav-item"><a class="nav-link link text-black display-4" href="grooming.html#top">Grooming</a></li>
