--- a/src/Index.html
+++ b/src/Index.html
@@ -153,7 +153,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/inside1-838x1117.jpg" alt="Haslam dog care Bolton">
+                        <img src="assets/images/bed.jpg" alt="Haslam dog care Bolton">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
